<resources>
    <string name="app_name">소소한 장보기 for 사장님</string>

    <string name="start_subtitle">간단하게 살펴보는 내 주변 상점</string>
    <string name="start_title_main">소소한 장보기</string>
    <string name="start_title_sub_for">for</string>
    <string name="start_title_sub_merchant">사장님</string>
    <string name="start_button_signup">시작하기</string>
    <string name="start_already_registered">이미 계정이 있으신가요?</string>
    <string name="start_login">로그인하기</string>

    <string name="network_error_title">서버 연결 오류</string>
    <string name="network_error_description">서버와 연결이 원활하지 않습니다.\n인터넷 연결 상태를 확인하고 잠시 후 다시 시도해주세요.</string>
    <string name="network_error_ok">확인</string>

    <string name="login_error_title">자동 로그인 실패</string>
    <string name="login_error_description">자동 로그인 정보가 올바르지 않습니다.\n다시 로그인해주세요.</string>
    <string name="login_error_ok">확인</string>

    <string name="signup_form_title">회원가입</string>
    <string name="signup_form_signup">가입하기</string>
    <string name="signup_form_hint_email">이메일</string>
    <string name="signup_form_before_check_email_duplication">중복확인</string>
    <string name="signup_form_after_check_email_duplication">확인완료</string>
    <string name="signup_form_hint_password">비밀번호</string>
    <string name="signup_form_hint_password_check">비밀번호 확인</string>
    <string name="signup_form_hint_name">이름</string>
    <string name="signup_form_hint_phone">휴대전화 번호</string>

    <string name="signup_form_error_required">필수 입력 항목입니다.</string>
    <string name="signup_form_error_email_inappropriate">이메일 형식이 올바르지 않습니다.</string>
    <string name="signup_form_error_email_duplicated">중복된 이메일입니다.</string>
    <string name="signup_form_error_email_not_checked">이메일 중복확인이 완료되지 않았습니다.</string>
    <string name="signup_form_error_password_too_short">비밀번호가 너무 짧습니다. (8자 이상)</string>
    <string name="signup_form_error_password_check_mismatch">비밀번호가 일치하지 않습니다.</string>

    <string name="signup_done_title">회원가입 완료</string>
    <string name="signup_done_image_description">회원가입 완료 이미지</string>
    <string name="signup_done_explanation">회원가입이 완료되었습니다.\n로그인 후 점포 등록 신청을 진행해주세요.</string>
    <string name="signup_done_ok">확인</string>

    <string name="login_title">로그인</string>
    <string name="login_hint_email">이메일</string>
    <string name="login_hint_password">비밀번호</string>
    <string name="login_login">로그인</string>
    <string name="login_forgot">로그인 정보를 잊으셨나요?</string>
    <string name="login_find_account">이메일/비밀번호 찾기</string>

    <string name="login_error_incorrect">이메일 또는 비밀번호가 올바르지 않습니다.</string>

    <string name="main_list">점포 목록</string>
    <string name="main_settings">설정</string>

    <string name="store_list_register">점포 등록</string>
    <string name="store_list_title">점포 목록</string>

    <string name="store_list_item_title">샘플 점포 이름</string>
    <string name="store_list_item_description">샘플 점포 소개글입니다.</string>
    <string name="store_list_item_image_description">점포 대표 이미지</string>
    <string name="store_list_item_verified_description">점포 승인 정보</string>

    <string name="settings_title">설정</string>
    <string name="settings_about">내 정보</string>
    <string name="settings_password">비밀번호 변경</string>
    <string name="settings_logout">로그아웃</string>
    <string name="settings_questions">문의하기</string>
    <string name="settings_withdrawal">회원탈퇴</string>

    <string name="user_update">수정하기</string>
    <string name="password_update">변경하기</string>

    <string name="store_status_image_description">점포 승인 정보</string>
    <string name="store_status_ok">확인</string>

    <string name="store_denied_code">이용 정지</string>
    <string name="store_denied_explanation">점포의 서비스 이용이 정지되었습니다.</string>

    <string name="store_pending_code">승인 대기 중</string>
    <string name="store_pending_explanation">점포 승인 절차가 진행중입니다.\n관리자 승인 이후 점포 관리가 활성화됩니다.</string>

    <string name="store_rejected_code">등록 승인 반려</string>
    <string name="store_rejected_explanation">점포 등록 신청이 반려되었습니다.</string>

    <string name="store_manage_console">점포 관리</string>
    <string name="store_manage_chat">채팅</string>
    <string name="store_manage_calendar">일정</string>

    <string name="store_manage_store_name">점포 이름</string>

    <string name="console_order">주문 내역</string>
    <string name="console_coupon">쿠폰 관리</string>
    <string name="console_point">포인트 관리</string>
    <string name="console_store_info">점포 정보</string>
    <string name="console_item">물품 관리</string>
    <string name="console_board">게시물 관리</string>
    <string name="console_review">리뷰 목록</string>
    <string name="console_accounting">회계 관리</string>
    <string name="console_store_open">영업 재개</string>
    <string name="console_store_pause">영업 중지</string>

    <string name="order_list_title">주문 목록</string>
    <string name="order_list_pending">승인 대기</string>
    <string name="order_list_pickup">오늘 픽업</string>
    <string name="order_list_delivery">배송 주문</string>

    <string name="store_register_basic_title">점포 등록</string>
    <string name="store_register_basic_image_description">점포 대표 이미지</string>
    <string name="store_register_basic_select_image">대표 이미지 선택</string>
    <string name="store_register_basic_name">점포명</string>
    <string name="store_register_basic_store_description">점포 소개글</string>
    <string name="store_register_basic_call">연락처</string>

    <string-array name="store_register_basic_spinner">
        <item>카테고리</item>
        <item>마트</item>
        <item>정육점</item>
        <item>수산물</item>
        <item>베이커리</item>
        <item>카페</item>
        <item>헤어샵</item>
        <item>세탁소</item>
        <item>서점</item>
        <item>사무용품</item>
        <item>학원</item>
        <item>사진관</item>
        <item>화원</item>
        <item>의류</item>
    </string-array>

    <string name="store_register_basic_open_days">영업일</string>
    <string name="store_register_basic_monday">월</string>
    <string name="store_register_basic_opening_hour">여는 시간</string>
    <string name="store_register_basic_closing_hour">닫는 시간</string>
    <string name="store_register_basic_tuesday">화</string>
    <string name="store_register_basic_wednesday">수</string>
    <string name="store_register_basic_thursday">목</string>
    <string name="store_register_basic_friday">금</string>
    <string name="store_register_basic_saturday">토</string>
    <string name="store_register_basic_sunday">일</string>
    <string name="store_register_basic_open_detail">영업 시간 추가 정보</string>
    <string name="store_register_basic_extra_service">추가 제공 서비스</string>
    <string name="store_register_basic_delivery">배달 서비스 제공</string>
    <string name="store_register_basic_local_currency">지역화폐 결제</string>
    <string name="store_register_basic_next">다음으로</string>

    <string name="store_register_metadata_title">사업자 정보 입력</string>
    <string name="store_register_metadata_number">사업자 등록 번호</string>
    <string name="store_register_metadata_owner">대표자 성명</string>
    <string name="store_register_metadata_name">상호명</string>
    <string name="store_register_metadata_open_date">개업일</string>
    <string name="store_register_metadata_address">점포 주소</string>
    <string name="store_register_metadata_address_detail">상세 주소</string>
    <string name="store_register_metadata_register">등록하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>