<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="signupFormViewModel"
            type="com.sososhopping.merchant.viewmodel.SignupViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        tools:context=".view.fragment.SignupFormFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:menu="@menu/menu_signup_form_toolbar"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:letterSpacing="0.25"
                android:text="@string/signup_form_title"
                android:textSize="24sp"
                android:textStyle="bold"
                android:textColor="@color/main_500"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/emailLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:boxStrokeColor="@color/main_500"
                app:hintTextColor="@color/main_500"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:text="@={signupFormViewModel.email}"
                    android:hint="@string/signup_form_hint_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/emailDuplicationCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:text="@string/signup_form_before_check_email_duplication"
                android:textColor="@color/negative"
                android:textStyle="bold"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/emailLayout"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/passwordLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:boxStrokeColor="@color/main_500"
                app:hintTextColor="@color/main_500"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/emailDuplicationCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={signupFormViewModel.password}"
                    android:hint="@string/signup_form_hint_password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/passwordCheckLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:boxStrokeColor="@color/main_500"
                app:hintTextColor="@color/main_500"
                app:passwordToggleEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:text="@={signupFormViewModel.passwordCheck}"
                    android:hint="@string/signup_form_hint_password_check" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:boxStrokeColor="@color/main_500"
                app:hintTextColor="@color/main_500"
                app:layout_constraintTop_toBottomOf="@id/passwordCheckLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:text="@={signupFormViewModel.name}"
                    android:hint="@string/signup_form_hint_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/phoneLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:boxStrokeColor="@color/main_500"
                app:hintTextColor="@color/main_500"
                app:layout_constraintTop_toBottomOf="@id/nameLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:text="@={signupFormViewModel.phone}"
                    android:hint="@string/signup_form_hint_phone" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>